--- a/main.yml
+++ b/main.yml
@@ -1,9 +1,34 @@
 ---
-# tasks file for roles/apache-ubuntu
+# tasks file for roles/apache-centos
 - name: Install Apache Server
-  apt:
-    pkg: 
-    - apache2
-    
+  yum:
+    name: httpd
+    state: latest
 
+- name: Create virtualhost config directory
+  file:
+    path: /etc/httpd/vhost.d
+    state: directory
+    mode: '0755'
+    owner: root
 
+- name: Add virtualHost config directory to httpd.conf
+  lineinfile:
+    path: /etc/httpd/conf/httpd.conf
+    line: IncludeOptional vhost.d/*.conf
+
+- name: Start and enable service
+  service:
+    name: httpd
+    state: started
+    enabled: yes
+
+- name: Configurar firewall
+  firewalld:
+    service: "{{ item }}"
+    state: enabled
+    permanent: yes
+    immediate: yes
+  loop:
+    - http
+    - https
